syntax = "proto3";
package com.ck567.grpc;
option java_outer_classname = "HelloProto";
option java_multiple_files = true;

message HelloRequest {
  string name = 1;
}
message HelloResponse {
  string message = 1;
}
service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}